внесено изменение в Index.HTML

--- a/Index.HTML
+++ b/Index.HTML
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title></title>
+    <title>app.creation"</title>
 </head>
     <body>
-        <a></a>
-        <a></a>
-        <a></a>
-        <a></a>
+        <a>start</a>
+        <a>services</a>
+        <a>about</a>
+        <a>contact</a>
 <section>
     <main>
-    <h1></h1>
-    <p></p>
-    <button></button>
+    <h1>Building an App Without Design Expertise?</h1>
+    <p>I help tech startups design better digital products without hiring a full-time designer</p>
+    </main>
+    <button >Schedule free consultation</button> 
     </main>
 <div>
 <img>
