--- a/Index.HTML
+++ b/Index.HTML
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>app.creation"</title>
+    <div>app.creation"</div>
 </head>
     <body>
         <a>start</a>
