--- a/Index.HTML
+++ b/Index.HTML
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html>
-    <head>
-    <div>app.creation"</div>
+<head>
+    <meta charset="UTF-8">
+    <title></title>
 </head>
-    <body>
-        <a>start</a>
-        <a>services</a>
-        <a>about</a>
-        <a>contact</a>
-<section>
-    <main>
-    <h1>Building an App Without Design Expertise?</h1>
-    <p>I help tech startups design better digital products without hiring a full-time designer</p>
-    </main>
-    <button >Schedule free consultation</button> 
-    </main>
-<div>
-<img>
-</div>
-</section>
+
+<body>
+    <div>app.creation</div>
+    <a>start</a>
+    <a>services</a>
+    <a>about</a>
+    <a>contact</a>
+    <section>
+        <main>
+            <h1>Building an App Without Design Expertise?</h1>
+            <p>I help tech startups design better digital products without hiring a full-time designer</p>
+            <button>Schedule free consultation</button>
+        </main>
+        <div>
+            <img>
+        </div>
+    </section>
 </body>
+
 </html>
