добавлен шрифт ROBOTO

--- a/Index.HTML
+++ b/Index.HTML
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"> 
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap">
+    <link rel="stylesheet" href="style.css">
+    <title>Web Hero Scool</title>
 </head>
-
 <body>
     <div>app.creation</div>
     <a>start</a>
