внесено изменение Index.html

--- a/Index.HTML
+++ b/Index.HTML
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap">
+<meta charset="UTF-8">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;1,300&display=swap">
     <link rel="stylesheet" href="style.css">
     <title>Web Hero Scool</title>
 </head>
 <body>
-    <div>app.creation</div>
-    <a>start</a>
-    <a>services</a>
-    <a>about</a>
-    <a>contact</a>
+    <header>
+      <div>app.creation</div>
+      <nav>
+         <a href="#">start</a>
+         <a href="#">services</a>
+         <a href="#">about</a>
+         <a href="#">blog</a>
+         <a href="#">contact</a>
+      </nav>
+    </header>
     <section>
         <main>
             <h1>Building an App Without Design Expertise?</h1>
