--- a/Index.HTML
+++ b/Index.HTML
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Web Hero Scool</title>
 </head>
-<body>
+<body> 
     <header>
       <div>app.creation</div>
       <nav>
@@ -20,7 +20,7 @@
     <section>
         <main>
             <h1>Building an App Without Design Expertise?</h1>
-            <p>I help tech startups design better digital products without hiring a full-time designer</p>
+            <p class="title">I help tech startups design better digital products without hiring a full-time designer</p>
             <button>Schedule free consultation</button>
         </main>
         <div>
