--- a/Index.HTML
+++ b/Index.HTML
@@ -8,7 +8,7 @@
 </head>
 <body> 
     <header class="header">
-      <div class="logo">app.creation</div>
+      <div class="header__logo">app.creation</div>
       <nav class="menu">
          <a class="menu__item" href="#">start</a>
          <a class="menu__item" href="#">services</a>
@@ -24,7 +24,7 @@
             <button class="main-content__button" type="button" name="button">Schedule free consultation</button>
         </main>
         <div class="image-content">
-            <img class="main-content__image"src="" alt="">
+            <img class="image-content__image"src="" alt="">
         </div>
     </section>
 </body>
