добавлены стили в структуру сайта

--- a/Index.HTML
+++ b/Index.HTML
@@ -7,6 +7,7 @@
     <title>Web Hero Scool</title>
 </head>
 <body> 
+    <div class="wrapper">
     <header class="header">
       <div class="header__logo">app.creation</div>
       <nav class="menu">
