--- a/Index.HTML
+++ b/Index.HTML
@@ -8,13 +8,10 @@
     <title>Web Hero Scool</title>
 </head>
 <body> 
-    <div class="logo">
-   <div class="logo__circle logo__circle_color_dark-blue"></div>
-  <div class="logo__circle logo__circle_color_blue"></div>
-        </div>
        <div class="wrapper">
     <header class="header">
-        <div class="header__logo">app.creation</div>
+        <div class="logo">
+        <div class="background__logo">app.creation</div>
       <nav class="menu">
          <a class="menu__item" href="#">start</a>
          <a class="menu__item" href="#">services</a>
