--- a/Index.HTML
+++ b/Index.HTML
@@ -10,8 +10,8 @@
 <body> 
        <div class="wrapper">
     <header class="header">
-        <div class="logo">
-        <div class="background__logo">app.creation</div>
+        <div class="header__logo">
+        </div>
       <nav class="menu">
          <a class="menu__item" href="#">start</a>
          <a class="menu__item" href="#">services</a>
