--- a/Index.HTML
+++ b/Index.HTML
@@ -8,7 +8,7 @@
     <title>Web Hero Scool</title>
 </head>
 <body> 
-    <div class="logo">app.creation</div>
+    <div class="logo"></div>        
    <div class="wrapper">
     <header class="header">
         <div class="header__logo">
