--- a/Index.HTML
+++ b/Index.HTML
@@ -15,11 +15,11 @@
         </div>
       <nav class="menu">
          <a class="menu__item" href="#">start</a>
-         <a class="menu__item" href="#">services</a>
+         <a class="menu__item menu__item_active" href="#">services</a>
          <a class="menu__item" href="#">about</a>
          <a class="menu__item" href="#">blog</a>
          <a class="menu__item" href="#">contact us</a>
-      </nav>
+ </nav>
     </header>
     <section class="main-section">
         <main class="main-content">
