--- a/Index.HTML
+++ b/Index.HTML
@@ -23,10 +23,16 @@
     </header>
     <section class="main-section">
         <main class="main-content">
-            <h1 class="main-content__title">Building an App Without Design Expertise?</h1>
-            <p class="main-content__subtitle">I help tech startups design better digital products without hiring a full-time designer</p>
-            <button class="main-content__button" type="button" name="button">Schedule free consultation</button>
-        </main>
+            <section class="main">
+
+                <h1 class="main__title">Building an App Without Design Expertise?</h1>
+               
+                <p class="main__subtitle">I help tech startups design better digital
+               products without hiring a full-time designer</p>
+               
+                <button class="main__button" type="button" name="button">Schedule
+               free consultation</button>   
+                </section>
         <div class="image-content">
             <img class="image-content__image"src="" alt="">
         </div>
