--- a/Index.HTML
+++ b/Index.HTML
@@ -24,18 +24,13 @@
     <section class="main-section">
         <main class="main-content">
             <section class="main">
-
-                <h1 class="main__title">Building an App Without Design Expertise?</h1>
-               
-                <p class="main__subtitle">I help tech startups design better digital
-               products without hiring a full-time designer</p>
-               
-                <button class="main__button" type="button" name="button">Schedule
-               free consultation</button>   
+        <h1 class="main__title">Building an App Without Design Expertise?</h1>
+<p class="main__subtitle">I help tech startups design better digitalproducts without hiring a full-time designer</p>
+<button class="main__button" type="button" name="button">Schedule free consultation</button>  
                 </section>
         <div class="image-content">
             <img class="image-content__image"src="" alt="">
         </div>
     </section>
 </body>
-</html> 
+</html>  
