--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,6 @@
    <div class="wrapper">
      <header class="header">
        <div class="logo"></div>  
-       <div class="header__logo"></div>
        <nav class="menu">
          <a class="menu__item" href="#">start</a>
          <a class="menu__item menu__item_active" href="#">services</a>
@@ -22,7 +21,8 @@
     </header>
     <section class="main">
       <h1 class="main__title">Building an App Without Design Expertise?</h1>
-      <p class="main__subtitle">I help tech startups design better digitalproducts without hiring a full-time designer</p> 
+      <p class="main__subtitle">I help tech startups design better digital 
+      products without hiring a full-time designer</p> 
       <button class="main__button" type="button" name="button">Schedule free consultation</button>  
       <div class="image-content">
         <img class="image-content__image"src="" alt="">
