--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,8 @@
     </header>
     <section class="main">
       <h1 class="main__title">Building an App Without Design Expertise?</h1>     
-      <p class="main__subtitle">I help tech startups design better digital products without hiring a full-time designer</p> 
+      <p class="main__subtitle">I help tech startups design better digital
+   products without hiring a full-time designer</p> 
       <button class="main__button" type="button" name="button">Schedule free consultation</button>  
       <div class="image-content">
         <img class="image-content__image"src="" alt="">
