--- a/Index.html
+++ b/Index.html
@@ -5,12 +5,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="style.css">
-    <title>Web Hero Scool</title>
+    <title>web scool</title>
+    <meta name="viewport"content="width=devise-width, initial-scale=1"> 
 </head>
 <body>        
-   <div class="wrapper">
+   <div class="wrap">
      <header class="header">
-       <div class="logo"></div>  
+      <div class="logo"></div>
        <nav class="menu">
          <a class="menu__item" href="#">start</a>
          <a class="menu__item menu__item_active" href="#">services</a>
