--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,7 @@
 </head>
 <body>        
    <div class="wrap">
+    <h1 class="wrap__title">
      <header class="header">
       <div class="logo"></div>
        <nav class="menu">
