--- a/Index.html
+++ b/Index.html
@@ -5,12 +5,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="style.css">
-    <title>web scool</title>
-    <meta name="viewport"content="width=devise-width, initial-scale=1"> 
+    <title>web hero school</title>
+    <meta name="viewport"content="width=device-width,initial-scale=1">
 </head>
 <body>        
    <div class="wrap">
-    <h1 class="wrap__title">
      <header class="header">
       <div class="logo"></div>
        <nav class="menu">
