--- a/Index.html
+++ b/Index.html
@@ -13,6 +13,7 @@
      <header class="header">
       <div class="logo"></div>
        <nav class="menu">
+      <div class="hamburger-menu">
          <a class="menu__item" href="#">start</a>
          <a class="menu__item menu__item_active" href="#">services</a>
          <a class="menu__item" href="#">about</a>
