--- a/Index.html
+++ b/Index.html
@@ -12,8 +12,20 @@
    <div class="wrap">
      <header class="header">
       <div class="logo"></div>
-       <nav class="menu">
       <div class="hamburger-menu">
+        <input id="menu__toggle" type="checkbox" />
+        <label class="menu__btn" for="menu__toggle">
+          <span></span>
+        </label>
+        <ul class="menu__box">
+          <li><a class="menu__item" href="#">Главная</a></li>
+          <li><a class="menu__item" href="#">Проекты</a></li>
+          <li><a class="menu__item" href="#">Команда</a></li>
+          <li><a class="menu__item" href="#">Блог</a></li>
+          <li><a class="menu__item" href="#">Контакты</a></li>
+        </ul>
+      </div>
+       <nav class="menu">
          <a class="menu__item" href="#">start</a>
          <a class="menu__item menu__item_active" href="#">services</a>
          <a class="menu__item" href="#">about</a>
