--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
    <div class="wrap">
      <header class="header">
       <div class="logo"></div>
-      <div class="hamburger-menu">
+      <div class="hamburger-menu"></div>
         <input id="menu__toggle" type="checkbox" />
         <label class="menu__btn" for="menu__toggle">
           <span></span>
