--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,16 @@
    <div class="wrap">
      <header class="header">
       <div class="logo"></div>
-      <div class=hamburger-menu></div>
+
+      <div class="hamburger-menu"></div>
+      <nav class="menu">
+        <a class="menu__item" href="#">start</a>
+        <a class="menu__item menu__item_active" href="#">services</a>
+        <a class="menu__item" href="#">about</a>
+        <a class="menu__item" href="#">blog</a>
+        <a class="menu__item" href="#">contact us</a>
+      </nav>
+      </nav>
         <input id="menu__toggle" type="checkbox" />
         <label class="menu__btn" for="menu__toggle">
           <span></span>
@@ -25,13 +34,6 @@
           <li><a class="menu__item" href="#">Контакты</a></li>
         </ul>
       </div>
-       <nav class="menu">
-         <a class="menu__item" href="#">start</a>
-         <a class="menu__item menu__item_active" href="#">services</a>
-         <a class="menu__item" href="#">about</a>
-         <a class="menu__item" href="#">blog</a>
-         <a class="menu__item" href="#">contact us</a>
-       </nav>
     </header>
     <section class="main">
       <h1 class="main__title">Building an App<span class="main__title-text_highlight"> Without Design Expertise?</span></h1>     
